# battilde

./: .gitignore  Cargo.toml  README.md  build.rs  textclient.py
battilde-macros/: Cargo.toml
battilde-macros/src/: lib.rs
maps/: custom.json
src/: bullet.rs  config.rs  controls.rs  creature.rs  gamemode.rs  gameserver.rs  holder.rs  item.rs  main.rs  mapgen.rs  player.rs  pos.rs  sprite.rs  tile.rs  util.rs  waves.rs  weapon.rs  world.rs  worldmessages.rs
src/sprite/: player_sprites.rs
