[package]
name = "battilde"
version = "0.2.0"
authors = ["troido <troido@protonmail.com>"]
edition = "2018"

[dependencies]
mio-uds = "0.6"
mio = "0.6"
slab = "0.4.2"
nix = "0.13"
users = "0.8"
rand = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctrlc = { version = "3.1", features = ["termination"] }
structopt = "0.3"
unicode_categories = "0.1.1"
chrono = "0.4.17"
json5 = "0.2.8"
